--- a/application/src/main/webapp/css/components/chat.less
+++ b/application/src/main/webapp/css/components/chat.less
@@ -1,8 +1,5 @@
 #chatApplicationContainer {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  ::-webkit-scrollbar {
-    display: none;
-  }
   .dropdown.top .dropdown-menu{
     bottom: 25px;
     top: auto;
@@ -164,7 +161,7 @@
   text-align: center;
   > li > a {
     display: block;
-    padding: 15px;
+    padding: 12px 15px;
     color: inherit;
   }
   > li + li {
