--- a/application/src/main/webapp/css/components/miniChat.less
+++ b/application/src/main/webapp/css/components/miniChat.less
@@ -223,7 +223,7 @@
       max-width: 100%;
       padding: 0;
     }
-    .chat-message {
+    .chat-message-composer {
       height: auto;
 
       .composer-container {
