--- a/application/src/main/webapp/css/layout.less
+++ b/application/src/main/webapp/css/layout.less
@@ -57,7 +57,7 @@
   padding: 0 10px 0 30px;
   overflow-y: auto;
 }
-.chat-message {
+.chat-message-composer {
   height: 100px;
   position: relative;
   user-select: none;
